added nav and some sass vars
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/content/index/index.yml
+++ b/content/index/index.yml
@@ -1,4 +1,8 @@
-title: Homepage
+title: Cuttlebelle - The react static site generator that separates editing and code concerns
+
+header:
+  - /shared/nav.md
+
 main:
   - header.md
   - main.md
