--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"email": "hi@dominik-wilkowski.com",
 		"url": "https://dominik-wilkowski.com/"
 	},
-	"homepage": "https://cuttlebelle.com",
+	"homepage": "http://cuttlebelle.com",
 	"contributors": [
 		{
 			"name": "Dominik Wilkowski",
