fixed css watch, added stdout to code
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
 		"docs": "cuttlebelle docs",
 		"build:site": "cuttlebelle",
 		"build:autoprefix": "postcss code/assets/css/*.css -u autoprefixer -r --no-map",
-		"build:css": "mkdir -p code/assets/css/ && node-sass --output-style compressed -o code/assets/css code/sass/style.scss",
+		"build:sass": "mkdir -p code/assets/css/ && node-sass --output-style compressed -o code/assets/css code/sass/style.scss",
+		"build:css": "npm run build:sass && npm run build:autoprefix",
 		"build:js-header": "concat-cli -f code/js/header/*.js -o code/assets/js/header.js",
 		"build:js-footer": "concat-cli -f code/js/footer/*.js -o code/assets/js/footer.js",
 		"build:uglify": "uglifyjs code/assets/js/header.js --compres --output code/assets/js/header.js && uglifyjs code/assets/js/footer.js --compres --output code/assets/js/footer.js",
 		"build:js": "mkdir -p code/assets/js/ && npm run build:js-header && npm run build:js-footer && npm run build:uglify",
-		"build:assets": "npm run build:css && npm run build:autoprefix && npm run build:js",
+		"build:assets": "npm run build:css && npm run build:js",
 		"build": "npm run build:assets && npm run build:site",
-		"watch:sass": "onchange 'code/sass/**/*.scss' -- npm run build:css && npm run build:autoprefix",
+		"watch:sass": "onchange 'code/sass/**/*.scss' -- npm run build:css",
 		"watch:js": "onchange 'code/js/**/*.js' -- npm run build:js",
 		"watch:site": "cuttlebelle -w -n",
 		"watch": "npm run build && npm run watch:sass | npm run watch:js | npm run watch:site",
