setup docs, updated deps etc
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/content/documentation/content/index.yml
+++ b/content/documentation/content/index.yml
@@ -1,10 +1,9 @@
-title: Documentation
+title: Documentation for content authors
 
 header:
   - /shared/nav.md
 
 main:
-  - toc.md
   - content-getting-started.md
 
 footer:
