--- a/content/documentation/code/index.yml
+++ b/content/documentation/code/index.yml
@@ -1,10 +1,9 @@
-title: Documentation
+title: Documentation for developers
 
 header:
   - /shared/nav.md
 
 main:
-  - toc.md
   - content-getting-started.md
 
 footer:
