--- a/content/index/index.yml
+++ b/content/index/index.yml
@@ -1,4 +1,4 @@
-title: Cuttlebelle - The react static site generator that separates editing and code concerns
+title: The react static site generator that separates editing and code concerns
 
 header:
   - header.md
