--- a/content/contribute/index.yml
+++ b/content/contribute/index.yml
@@ -1,10 +1,16 @@
+layout: docs/page
 title: How to contribute
 
 header:
   - /shared/nav.md
 
-main:
+navigation:
   - toc.md
+
+docs:
+  - help-cuttlebelle-development.md
+  - help-plugin-development.md
+  - help-gui-development.md
 
 footer:
   - /shared/footer.md
