--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 	],
 	"dependencies": {
 		"autoprefixer": "^9.7.6",
-		"cuttlebelle": "file:../cuttlebelle-sambauers",
+		"cuttlebelle": "latest",
 		"node-sass": "^4.14.0",
 		"postcss-cli": "^7.1.1",
 		"slugify": "^1.4.0",
